[package]
name = "time1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.36", features = ["macros", "serde"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
