[package]
name = "io"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "echo-server"
path = "bin/echo-server.rs"

[[bin]]
name = "echo-server-copy"
path = "bin/echo-server-copy.rs"

[[bin]]
name = "echo-client"
path = "bin/echo-client.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"